--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,9 @@ dist
 build
 .strapi-updater.json
 .strapi-cloud.json
+
+############################
+# Demo Data
+############################
+
+!demo/data/demodata.tar.gz
